Squashed commit of the following:
commit ad8893b5857e538b0ac255153459b442efa0bc7f
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 10:46:59 2023 -0700

    remove large binary files (saved in /d/tmp)

commit 8aa0949bfcc4c0003b633c1a8edd10d776ebd2b3
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 10:46:29 2023 -0700

    move MNIST_inv_eq to repo root.

commit 884183a2a7f85fdd16a057130689735345fc2041
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 07:45:43 2023 -0700

    ignore tdatasets.

commit fa5164ae31e8a495dfd842bf43a9fe6b3cdd4322
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 06:59:45 2023 -0700

    switch to use mnist from mldatasets.

commit b449e9053c9070269431bc712e8c5752d86a0a94
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 06:14:05 2023 -0700

    MNIST_inv_eq to use our MNIST from mldatasets.

commit 7451386fb2fe57e3a1504bdac6cd1a7c9ef84884
Author: mannyk <man962@yahoo.com>
Date:   Tue Jul 18 06:13:33 2023 -0700

    ren datasets -> tdatasets.

commit b1ed9c870bccd731bc7e50b84832a120340ed620
Author: mannyk <man962@yahoo.com>
Date:   Sun Jul 16 14:53:55 2023 -0700

    move translation_experiment up 1 level + fix up GPU support + Path.

commit d30ba89957428ab58f561deab44de1fd1b338230
Author: mannyk <man962@yahoo.com>
Date:   Sun Jul 16 14:46:39 2023 -0700

    Path.

commit 9dd8170dd012d6953ca47806dc49314bd0fc5320
Author: mannyk <man962@yahoo.com>
Date:   Sun Jul 16 14:34:39 2023 -0700

    move rotation_experiment up 1 level in repo + use gpu for some of the heavy compute.

    WIP - Adversarial Robustness fixed up to use gpu -> 3+x speedup.

commit 4c5b48c794e7d71849652ce029a51a576905f5a8
Author: mannyk <man962@yahoo.com>
Date:   Sun Jul 16 14:32:32 2023 -0700

    original PDFs in figs/rotation|translation (from original repo).

commit 9df1185c7f57967e8507a770b8c1960e3ec26646
Author: mannyk <man962@yahoo.com>
Date:   Sun Jul 16 08:49:51 2023 -0700

    enable all tests.

commit bfda2f29cd33defecf9bfaeb179a82ead4fa0ffe
Auth

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 __pycache__
 logs
 datasets
+tdatasets/
 venv4bisp
 *.zip
+*.csv
+*.mat
+*.iml
+bispectral_networks.egg-info
+notebooks/.ipynb_checkpoints/
+notebooks/figs/
+dist
+ipynb_checkpoints/
+
